--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jai0903.github.io/Jaichandra_Portfolio",
+  "homepage": "http://jai1007-lab.github.io/Jaichandra_Portfolio",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
